# xmppgate

./: .cproject  .project  CMakeLists.txt  README.md  crossdomain.xml  urun  valrun
CMake/Modules/: FindCRYPTOPP.cmake  FindLLVM.cmake  FindLibEvent.cmake  FindMySQL.cmake
src/: AppSurfing.cpp  CMakeLists.txt  Response.cpp  Session.cpp  Url.cpp  User.cpp  Variant.cpp  debug.cpp  jazz.cpp
src/include/: AppSurfing.h  Response.h  Session.h  Url.h  User.h  Variant.h  debug.h
src/service/: CMakeLists.txt  lli.cpp  main.cpp
