FIND_PACKAGE(LLVM REQUIRED)

ADD_DEFINITIONS( -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    #${CMAKE_CURRENT_SOURCE_DIR}/game/include
    #${CMAKE_CURRENT_SOURCE_DIR}/engine/include
    #${CMAKE_CURRENT_SOURCE_DIR}/math/include
    #${MYSQL_INCLUDE_DIR}
    #${MYSQLPP_INCLUDE_DIR}
    #${LIBXML2_INCLUDE_DIR}
    )

SET (PROGRAMS jazzsvc)

SET(SVC_SRCS
    main.cpp
    lli.cpp
    )

#set (INTERNAL_LIBRARIES ${INTERNAL_LIBRARIES}
#    crgame
#    crengine
#    crmath
#    )

SET(SVC_HEADERS
    )
ADD_EXECUTABLE(jazzsvc ${SVC_SRCS} ${SVC_HEADERS})

TARGET_LINK_LIBRARIES(jazzsvc
    ${INTERNAL_LIBRARIES}
    ${LLVM_LIBRARIES}
    ${LIBINTL_LIBRARIES}
    ${EXTRA_LIBRARIES})

INSTALL(TARGETS jazzsvc RUNTIME DESTINATION ${PKG_BINDIR})
INSTALL(FILES ${SVC_HEADERS} DESTINATION include)

